--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html lang="es" ng-app="main">
 <head>
-        <meta charset="utf-8">
-        <title>Andres Garces - Website</title>
+    <meta charset="UTF-8">
+    <title>Andres Garces - Website</title>
+    <link rel="shortcut icon" href=""/>
         <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
 
         <link rel="stylesheet" href="bower_components/jquery-ui.css" />
